<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Encybara</string>
    <string name="back">Back</string>
    <string name="load">Loading...</string>
    <string name="mycourse">My course</string>
    <string name="join">Join Course</string>
    <string name="suggestcourse">All course</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fill_blank">Read and implement as required.</string>
    <string name="listen_rewrite">Listen and implement as required.</string>
    <string name="ques_lis">What are they talking about ?</string>
    <string name="check">Check Result</string>
    <string name="record_again">Record again</string>
    <string name="review">Review Answer</string>
    <string name="material_course">Complete the lesson</string>
    <string name="first">Do you want to study the lecture of this course?</string>
    <string name="not_first">Do you want to study the lecture of this course again?</string>
    <string name="grammar">Grammar</string>
    <string name="result">Hold on a second, we are working out your results!</string>
    <string name="writting">Writing</string>
    <string name="lis">Listening</string>
    <string name="speak">Speaking</string>
    <string name="write">Writing</string>
    <string name="read">Reading</string>
    <string name="record">Voice Response</string>
    <string name="ans_record">Answer the question by recording</string>
    <string name="your_ans">Your answer :</string>
    <string name="txt_it">INFORMATION  TECHNOLOGY</string>
    <string name="txt_construction">CONSTRUCTION</string>
    <string name="txt_economic">ECONOMIC</string>
    <string name="txt_mechanic">MECHANIC</string>
    <string name="txt_other">OTHERS</string>
    <string name="btn_continute">Continue Studying</string>
    <string name="txt_choose">Choose your course</string>
    <string name="txtcontinute">Continue your journey!</string>
    <string name="txtschedulebasic">Basic 10 mins per day</string>
    <string name="txtscheduleadvance">Advance 20 mins per day</string>
    <string name="txtlevelupschedule">Level-up! 30 mins per day</string>
    <string name="hintPassWord">* The password must be at least 8 characters long and include uppercase, lowercase letters, and numbers.</string>
    <string name="selectMajor">SELECT YOUR MAJOR</string>
    <string name="txt_confirmcode">Confirm Code</string>
    <string name="txt_codewassend">Code has been Send to ****.gmail.com</string>
    <string name="txt_resendcodeIn">Resend Code in</string>
    <string name="txt_resendcode">Resend Code </string>
    <string name="txt_about">About</string>
    <string name="joinn">You have successfully joined the course, go to Study to start the lesson!</string>
    <string name="start_">HOW WOULD YOU LIKE TO START ?</string>
    <string name="txt_lesson">Lessons</string>
    <string name="txt_rvCourse">Reviews</string>
    <string name="txt_dictionary">Dictionary</string>
    <string name="txt_discussion">Discussion</string>
    <string name="Language">Select Language</string>
    <string name="backhome">Go to home</string>
    <string name="invalidans">Invalid answer. Please try again.</string>
    <string name="starttest">Take a \n small test!</string>
    <string name="nonetest">Start a new\n program!</string>
    <string name="englishlevel">Choose your \nenglish level</string>
    <string name="levelintro">Choose a starting\n level that matches\n your proficiency.</string>
    <string name="start">Start here</string>
    <string name="course_cotinue">Ongoing Course</string>
    <string name="course_suggest">Recommended Course</string>
    <string name="course_comp">Completed Course</string>
    <string name="writeans">Write your answer....</string>
    <string name="VN">Vietnamese</string>
    <string name="Eng">English</string>
    <string name="improvements">Improvement: </string>
    <string name="point">Point:</string>
    <string name="comp">Complete: </string>
    <string name="correct">That\'s right!</string>
    <string name="ANS">Answer: </string>
    <string name="nextques">Next lesson</string>
    <string name="compcourse">You’ve finished this course!</string>
    <string name="joincourse">You’ve joined this course!</string>
    <string name="viewpointcourse">View course result</string>
    <string name="oops">Oops… That\'s not the answer.</string>
    <string name="COANS">Correct answer:</string>
    <string name="txt_editPro">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint">Find a word</string>
    <string name="word">Word: </string>
    <string name="hint_name">Name</string>
    <string name="update_pro">Update</string>
    <string name="txt_explore">Tools and features</string>
    <string name="dictionary">Dictionary</string>
    <string name="flashcard">Flashcards</string>
    <string name="schedule">Schedule</string>
    <string name="sort">Sort ▼</string>
    <string name="definition">Definition</string>
    <string name="forgot"> Forgot Password</string>
    <string name="txt_forgot">Select your email account to revice\n confirm code</string>
    <string name="hint_email">Email</string>
    <string name="Continue">Continue</string>
    <string name="choose">Choose the correct answer</string>
    <string name="flash_group">Flashcard groups</string>
    <string name="skip">Skip</string>
    <string name="congrat">Congratulations</string>
    <string name="txt_setupacc">Your Account is Ready to Use. You will be redirected to the Sign In in a few seconds.</string>
    <string name="newpass">Create New PassWord</string>
    <string name="txt_newpass">Create Your New Password</string>
    <string name="hint_pass">Password</string>
    <string name="hint_repass">Re-enter password</string>
    <string name="noti">Notifications</string>
    <string name="question">Question</string>
    <string name="yans">Your answer</string>
    <string name="hint_ans">Answer....</string>
    <string name="ans">Answer</string>
    <string name="dailygoal">Daily goals!</string>
    <string name="remindat">Remind me at:</string>
    <string name="ontheday">On the days:</string>
    <string name="smalltestintro">Receive a personalized\n learning program\n upon completion</string>
    <string name="newprogramintro">Explore a pre-made\n program and start\n learning</string>
    <string name="txt_rating">Rate this course:</string>
    <string name="writeAReview">Write a review... </string>
    <string name="Phonetic">Phonetic: </string>
    <string name="PartofSpeech">Part of Speech: </string>
    <string name="Definition">Definition: </string>
    <string name="VietnameseMeaning">Vietnamese Meaning: </string>
    <string name="Editprofile">Edit profile</string>
    <string name="Language2">Language</string>
    <string name="TermsAndConditions">Terms &amp; Conditions</string>
    <string name="Logout">Logout</string>
    <string name="OverallPoints">Overall Points</string>
    <string name="Listening">Listening: </string>
    <string name="Speaking">Speacking: </string>
    <string name="Reading">Reading: </string>
    <string name="Writing">Writing: </string>
    <string name="Cancel">Cancel</string>
    <string name="Remove">Yes, Remove</string>
    <string name="Enternewgroupname">Enter new group name</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Add">Add</string>
    <string name="EnterName">Enter name</string>
    <string name="EnterWord">Enter word</string>
    <string name="Done">Done</string>
    <string name="Writetheanswer">Write the answer follow the question</string>
    <string name="Answer">Answer: </string>
    <string name="welcome_">Welcome Back </string>
    <string name="hellothere">Hello there, sign in continue</string>
    <string name="remme">Remember me</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="not_have_acc">Don’t have an Account?</string>
    <string name="signup">SIGN UP</string>
    <string name="createacc">Create account</string>
    <string name="hellothere2">Hello there, fill in below to create an account</string>
    <string name="agree">Agree to Terms Conditions</string>
    <string name="havedacc">Already have an account?</string>
    <string name="signin">SIGN IN</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="lichmoi">The schedule has been successfully set!</string>
    <string name="trunglich">You have already set this schedule!</string>
    <string name="txtforgot">Select your email account to revice\n confirm code</string>
    <string name="countinue">Continue</string>
    <string name="comment">Comment...</string>
    <string name="answer">Answer....</string>
    <string name="dangxuat">Confirm log out</string>
    <string name="cfdangxuat">Are you sure you want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="addflash">Add to my flashcards</string>
    <string name="view">View improvement</string>
    <string name="nextquestion">Next question</string>
    <string name="nocourse">You have not enrolled in any courses yet.</string>
    <string name="home">Home</string>
    <string name="study">Study</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <!--    <string name="intro1">Welcome to Encybara - The Specialized English \n Learning App!</string>-->
    <!--    <string name="getready">Get ready!!</string>-->
    <!--    <string name="encybara">Encybara!</string>-->
    <!--    <string name="learn_capy">Let's learn English with Capy >v<</string>-->
    <!--    <string name="future_app">The English learning app from the future!</string>-->
    <string name="games">Games</string>
</resources>