<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_corner">

        <Button
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_16"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/Done"
            android:textColor="#E65D33"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phoneticLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phonetic"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="horizontal">

            <LinearLayout
                android:id="@+id/phoneticContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="8dp"/>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/partOfSpeechLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PartofSpeech"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="horizontal">

            <LinearLayout
                android:id="@+id/partOfSpeechContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="8dp"/>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/definitionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Definition"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/definitionScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/definitionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:background="@drawable/rounded_corner"
                android:layout_marginBottom="8dp"/>
        </ScrollView>

        <TextView
            android:id="@+id/vietnameseMeaningLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VietnameseMeaning"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/vietnameseMeaningTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</ScrollView>