<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">
        <TextView
            android:id="@+id/wordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/phoneticLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phonetic"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="horizontal">

            <LinearLayout
                android:id="@+id/phoneticContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginBottom="8dp"/>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/partOfSpeechLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PartofSpeech"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="horizontal">

            <LinearLayout
                android:id="@+id/partOfSpeechContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginBottom="8dp"/>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/definitionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Definition"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/definitionScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/definitionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_marginBottom="8dp"/>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/vietnameseMeaningLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VietnameseMeaning"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/vietnameseMeaningTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/rounded_textview"
            android:layout_marginBottom="@dimen/dp_16"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#172B4D"
            android:text="@string/addflash"
            android:textColor="#FFFFFF"
            android:textColorLink="#172B4D"
            android:layout_margin="20dp"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>