<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    app:cardCornerRadius="22dp">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/jam_write"/>
            <EditText
                android:id="@+id/edtFlashName"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/EnterWord"
                android:padding="10dp"/>
<!--            <ImageView-->
<!--                android:id="@+id/btnSearch"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/icon_search"-->
<!--                android:layout_gravity="center"/>-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_30">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:backgroundTint="#FFE7A56F"
                android:text="@string/Cancel" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFE7A56F"
                android:layout_marginLeft="@dimen/dp40"
                android:text="@string/Add"
                android:enabled="false"
                android:alpha="0.5"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
