<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF6FF">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/Language"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/btnEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/flag_english" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:textSize="15sp"
                    android:text="@string/Eng"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnVietnamese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/flag_vietnam" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:textSize="15sp"
                    android:text="@string/VN"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>
