<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg_edit_group">
    <ImageView
        android:id="@+id/btnclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/icon_close"/>
    <LinearLayout
        android:id="@+id/flcid"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/item_flashcard"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_16"
                android:background="@drawable/write_groupname" />

            <EditText
                android:id="@+id/edtGroupName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_16"
                android:hint="@string/Enternewgroupname"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:textColor="@color/white"
            android:backgroundTint="#334561"/>
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit"
            android:backgroundTint="#2574EF"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/dp_60"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30"
            android:enabled="false"
            android:alpha="0.3"/>
    </LinearLayout>
</LinearLayout>
